--- a/web.config
+++ b/web.config
@@ -1,6 +1,7 @@
 <configuration>
     <system.web>
         <compilation batch="false" />
+		<customErrors mode="On">
     </system.web>
     <system.webServer>
         <handlers>
