--- a/web.config
+++ b/web.config
@@ -2,6 +2,7 @@
     <system.web>
         <compilation batch="false"/>
 		<customErrors mode="On">
+		</customErrors>
     </system.web>
     <system.webServer>
         <handlers>
