--- a/web.config
+++ b/web.config
@@ -1,8 +1,18 @@
 <configuration>
     <system.web>
         <compilation batch="false"/>
+		<customErrors mode="On" redirectMode="ResponseRedirect" defaultRedirect="/Views">
+			<error statusCode="404" redirect="~/Views/NotFound,html" />
+			<error statusCode="400" redirect="~/Views/BadRequest.html" />
+			<error statusCode="500" redirect="~/Views/InternalError.html" />
     </system.web>
     <system.webServer>
+		<httpErrors errorMode="Custom" defaultResponseMode="Redirect" defaultPath="/Views">
+			<clear/>
+			<error statusCode="404" path="~/Views/NotFound.html" responseMode="Redirect" />
+			<error statusCode="400" path="~/Views/BadRequest.html" responseMode="Redirect" />
+			<error statusCode="500" path="~/Views/InternalError.html" responseMode="Redirect" />
+		</httpErrors>
         <handlers>
             <add name="iisnode" path="Server.js" verb="*" modules="iisnode" />
         </handlers>
