--- a/web.config
+++ b/web.config
@@ -5,6 +5,7 @@
 			<error statusCode="404" redirect="~/Views/NotFound,html" />
 			<error statusCode="400" redirect="~/Views/BadRequest.html" />
 			<error statusCode="500" redirect="~/Views/InternalError.html" />
+		</customErrors>
     </system.web>
     <system.webServer>
 		<httpErrors errorMode="Custom" defaultResponseMode="Redirect" defaultPath="/Views">
